{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 35,
  "lineage": "74edcf73-84c3-a6e7-2047-d9e5bc9cbcb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e60b6ccbcdd13403",
            "association_id": "eipassoc-045021018802503a6",
            "domain": "vpc",
            "id": "eipalloc-0e60b6ccbcdd13403",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f0e1d54a71f1f184",
            "private_dns": "ip-10-0-1-36.us-west-2.compute.internal",
            "private_ip": "10.0.1.36",
            "public_dns": "ec2-35-167-166-54.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.166.54",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.priyaigw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "priyaigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:internet-gateway/igw-043a8272ea5495328",
            "id": "igw-043a8272ea5495328",
            "owner_id": "254011110770",
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:254011110770:loadbalancer/app/alb/8b3c01cc93acdd9e",
            "arn_suffix": "app/alb/8b3c01cc93acdd9e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-165269816.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:254011110770:loadbalancer/app/alb/8b3c01cc93acdd9e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0420d930abeac1ce1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08431f1137bd20617"
              },
              {
                "subnet_id": "subnet-0844f80cf0d012ef5"
              }
            ],
            "subnets": [
              "subnet-08431f1137bd20617",
              "subnet-0844f80cf0d012ef5"
            ],
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "vpc_id": "vpc-00cef33b273b518b6",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.priya-security-group",
            "aws_security_group.ssg2",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:254011110770:listener/app/alb/8b3c01cc93acdd9e/2dc9e12028e6f4d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:254011110770:targetgroup/priya-target-group/145e1f9336850298",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:254011110770:listener/app/alb/8b3c01cc93acdd9e/2dc9e12028e6f4d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:254011110770:loadbalancer/app/alb/8b3c01cc93acdd9e",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.priya_target_group",
            "aws_security_group.priya-security-group",
            "aws_security_group.ssg2",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "priya_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:254011110770:targetgroup/priya-target-group/145e1f9336850298",
            "arn_suffix": "targetgroup/priya-target-group/145e1f9336850298",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:254011110770:targetgroup/priya-target-group/145e1f9336850298",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "priya-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e60b6ccbcdd13403",
            "connectivity_type": "public",
            "id": "nat-0ab2dc44ebb1b0ec3",
            "network_interface_id": "eni-0f0e1d54a71f1f184",
            "private_ip": "10.0.1.36",
            "public_ip": "35.167.166.54",
            "subnet_id": "subnet-08431f1137bd20617",
            "tags": {
              "Name": "Natgw"
            },
            "tags_all": {
              "Name": "Natgw"
            }
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.priyaigw",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:route-table/rtb-05b0e184bfeda45cf",
            "id": "rtb-05b0e184bfeda45cf",
            "owner_id": "254011110770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ab2dc44ebb1b0ec3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PriyaRouteFargate"
            },
            "tags_all": {
              "Name": "PriyaRouteFargate"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:route-table/rtb-07a82e98fa5007b00",
            "id": "rtb-07a82e98fa5007b00",
            "owner_id": "254011110770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043a8272ea5495328",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PriyaPublicRoute"
            },
            "tags_all": {
              "Name": "PriyaPublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.priyaigw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717701c2c9f7826d",
            "route_table_id": "rtb-07a82e98fa5007b00",
            "subnet_id": "subnet-08431f1137bd20617"
          },
          "dependencies": [
            "aws_internet_gateway.priyaigw",
            "aws_route_table.publicRT1",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0404c07606bbe4ac0",
            "route_table_id": "rtb-07a82e98fa5007b00",
            "subnet_id": "subnet-0844f80cf0d012ef5"
          },
          "dependencies": [
            "aws_internet_gateway.priyaigw",
            "aws_route_table.publicRT1",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a4170ebb241ef4",
            "route_table_id": "rtb-05b0e184bfeda45cf",
            "subnet_id": "subnet-03d51cf2ae881451b"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.priyaigw",
            "aws_nat_gateway.nat",
            "aws_route_table.privateRT2",
            "aws_subnet.private_subnet1",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a35569a90599bc3c",
            "route_table_id": "rtb-05b0e184bfeda45cf",
            "subnet_id": "subnet-00d93530080cda26b"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.priyaigw",
            "aws_nat_gateway.nat",
            "aws_route_table.privateRT2",
            "aws_subnet.private_subnet2",
            "aws_subnet.publicsubnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priya-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:security-group/sg-04784202d951fe24c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04784202d951fe24c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "priya_security_group",
            "name_prefix": "",
            "owner_id": "254011110770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "priya_security_group"
            },
            "tags_all": {
              "Name": "priya_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:security-group/sg-0420d930abeac1ce1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0420d930abeac1ce1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04784202d951fe24c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "priyasg",
            "name_prefix": "",
            "owner_id": "254011110770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "priyafargatesg"
            },
            "tags_all": {
              "Name": "priyafargatesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.priya-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:subnet/subnet-03d51cf2ae881451b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d51cf2ae881451b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254011110770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivatePriyaFargate-1"
            },
            "tags_all": {
              "Name": "PrivatePriyaFargate-1"
            },
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:subnet/subnet-00d93530080cda26b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d93530080cda26b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254011110770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivatePriyaFargate-2"
            },
            "tags_all": {
              "Name": "PrivatePriyaFargate-2"
            },
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:subnet/subnet-08431f1137bd20617",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08431f1137bd20617",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254011110770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicpriyaFargate-0"
            },
            "tags_all": {
              "Name": "PublicpriyaFargate-0"
            },
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:subnet/subnet-0844f80cf0d012ef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0844f80cf0d012ef5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254011110770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicpriyaFargate-1"
            },
            "tags_all": {
              "Name": "PublicpriyaFargate-1"
            },
            "vpc_id": "vpc-00cef33b273b518b6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:254011110770:vpc/vpc-00cef33b273b518b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0209fd9ce3bdac69f",
            "default_route_table_id": "rtb-0664fa927ba8620c5",
            "default_security_group_id": "sg-01b56a375ebd5ebb2",
            "dhcp_options_id": "dopt-016a9bec47d82fafe",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00cef33b273b518b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0664fa927ba8620c5",
            "owner_id": "254011110770",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}